force-app/main/default/objects/Deployment_Record__c/Deployment_Record__c.object-meta.xml
<CustomObject>
    <description>Tracks deployment execution history for SEOMP-related changes.</description>
    <label>Deployment Record</label>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Deployment Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>