force-app/main/default/objects/Deployment_Record__c/listViews/All_Deployment_Records.listView-meta.xml
<ListView>
    <fullName>All_Deployment_Records</fullName>
    <columns>NAME</columns>
    <columns>Version__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>All Deployment Records</label>
</ListView>