force-app/main/default/objects/Deployment_Record__c/listViews/Failed_Deployments.listView-meta.xml
<ListView>
    <fullName>Failed_Deployments</fullName>
    <columns>NAME</columns>
    <columns>Version__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Deployments</label>
</ListView>